# revive

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
crates/cores/gameboy/core/: Cargo.toml
crates/cores/gameboy/core/src/: lib.rs
crates/cores/gameboy/gb/: Cargo.toml
crates/cores/gameboy/gb/src/: apu.rs  bus.rs  cartridge.rs  cpu.rs  lib.rs  ppu.rs  serial.rs  timer.rs
crates/cores/gameboy/gba/: Cargo.toml
crates/cores/gameboy/gba/src/: bus.rs  cpu.rs  lib.rs  ppu.rs  state.rs  timer.rs
crates/cores/mastersystem/: Cargo.toml
crates/cores/mastersystem/src/: audio.rs  bus.rs  input.rs  lib.rs  vdp.rs
crates/cores/megadrive/: Cargo.toml
crates/cores/megadrive/src/: audio.rs  cartridge.rs  cpu.rs  debug_flags.rs  input.rs  lib.rs  memory.rs  system.rs  vdp.rs  z80.rs
crates/cores/megadrive/src/audio/: bus.rs  psg.rs  tests.rs  ym2612.rs
crates/cores/megadrive/src/tests/: cpu_tests.rs  vdp_tests.rs
crates/cores/megadrive/src/vdp/: dma.rs  mode4.rs  plane.rs  ports.rs  sprites.rs
crates/cores/megadrive/src/z80/: bus.rs  tests.rs
crates/cores/megadrive/tests/: apu_regression.rs  cpu_regression.rs  sonic_regression.rs  vdp_regression.rs
crates/cores/nes/: Cargo.toml
crates/cores/nes/src/: audio_ring.rs  bus.rs  error.rs  lib.rs  nes.rs  nes_state.rs  save_state.rs  sram.rs
crates/cores/nes/src/apu/: diagnostics.rs  filter.rs  lifecycle.rs  mixer.rs  mod.rs  output.rs  registers.rs  state.rs  tables.rs  tests.rs  timing.rs
crates/cores/nes/src/bus/: controller.rs  cpu_map.rs  state.rs  timing.rs
crates/cores/nes/src/cartridge/: banks.rs  battery.rs  dispatch.rs  load.rs  mapper_state.rs  mod.rs  state.rs
crates/cores/nes/src/cpu/: instruction_add_sub.rs  instruction_addressing.rs  instruction_compare.rs  instruction_inc_dec.rs  instruction_memory.rs  mod.rs  opcode.rs  opcode_unofficial.rs  opcode_unofficial_immediate.rs  opcode_unofficial_inc_dec.rs  opcode_unofficial_load.rs  opcode_unofficial_nop.rs  (+4 more)
crates/cores/nes/tests/: audio_diag.rs  generated_rom.rs  pachicom_start.rs  vrc7_audio.rs
crates/cores/pce/: Cargo.toml
crates/cores/pce/src/: debugger.rs  lib.rs  vce.rs  vdc.rs
crates/cores/sega8-common/: Cargo.toml
crates/cores/sega8-common/src/: bus.rs  emulator.rs  input.rs  lib.rs  tms9918.rs  z80.rs
crates/cores/sg1000/: Cargo.toml
crates/cores/sg1000/src/: audio.rs  bus.rs  input.rs  lib.rs  vdp.rs  z80.rs
crates/cores/snes/: Cargo.toml
crates/cores/snes/src/: dma.rs  emulator.rs  hud_toast.rs  input.rs  lib.rs  savestate.rs  shutdown.rs
crates/cores/snes/src/audio/: apu.rs  mod.rs
crates/cores/snes/src/audio/apu/: config.rs  ports.rs
crates/cores/snes/src/audio/spc/: apu.rs  consts.rs  mod.rs  smp.rs  timer.rs
crates/cores/snes/src/audio/spc/dsp/: audio_dump.rs  brr_block_decoder.rs  dsp.rs  dsp_helpers.rs  envelope.rs  filter.rs  gaussian.rs  mod.rs  ring_buffer.rs  voice.rs
crates/cores/snes/src/bus/: access.rs  cpu_bus.rs  debug.rs  hdma.rs  io.rs  mdma.rs  mod.rs  read.rs  superfx_assist.rs  timing.rs  trace.rs  write.rs
crates/cores/snes/src/bus/sa1/: addr.rs  dma.rs  mod.rs
crates/cores/snes/src/cartridge/: dsp1.rs  dsp3.rs  mod.rs  sa1.rs  sdd1.rs  spc7110.rs  superfx.rs
crates/cores/snes/src/cartridge/mapper/: exhirom.rs  hirom.rs  lorom.rs  mod.rs
crates/cores/snes/src/cartridge/superfx/: debug_access.rs  history.rs  pixel_ops.rs  ram_access.rs  registers.rs  run_control.rs  snapshot.rs  starfox.rs  tests.rs  trace.rs
crates/cores/snes/src/cartridge/superfx/tests/: diagnostics.rs  instructions.rs  lifecycle.rs  memory.rs  registers.rs  runtime.rs  starfox_paths.rs  timing.rs
crates/cores/snes/src/cpu/: bus.rs  core.rs  mod.rs
crates/cores/snes/src/cpu/core/: addressing.rs  alu.rs  fetch.rs  interrupt.rs  stack.rs
crates/cores/snes/src/debug/: debugger.rs  flags.rs  mod.rs
crates/cores/snes/src/emulator/: debug_capture.rs  debug_controls.rs  diagnostics.rs  display_compat.rs  frame_output.rs  frame_step.rs  headless.rs  input_flow.rs  perf.rs  render_output.rs  runner_api.rs  runtime_config.rs  save_state.rs  starfox_diag.rs  superfx_view.rs  tests.rs  time_advance.rs
crates/cores/snes/src/emulator/tests/: core.rs  starfox.rs  superfx_capture.rs  superfx_direct.rs
crates/cores/snes/src/ppu/: access.rs  framebuffer.rs  latch.rs  mod.rs  palette.rs  registers.rs  rendering.rs  sprites.rs  state_io.rs  superfx_bridge.rs  timing.rs  trace.rs  window.rs
crates/cores/snes/src/ppu/registers/: read.rs  write.rs
crates/cores/snes/src/ppu/rendering/: bg_fetch.rs  color_math.rs  composite.rs  mode7.rs  screen_pixel.rs  superfx_direct.rs  trace.rs
crates/cores/snes/tests/: apu_regressions.rs  bus_regressions.rs  coprocessor_savestate_regressions.rs  cpu_contracts.rs  cpu_test_roms.rs  mapper_regressions.rs  ppu_regressions.rs  regression_recent_boots.rs  regression_runtime_contracts.rs  regression_super_formation_soccer.rs  sa1_regressions.rs  superfx_regressions.rs
crates/revive-cheat/: Cargo.toml
crates/revive-cheat/src/: lib.rs
crates/revive-cli/: Cargo.toml
crates/revive-cli/src/: audio.rs  cheat_panel.rs  events.rs  frame_clock.rs  gl_game.rs  hud.rs  input.rs  main.rs  render.rs  session.rs  state.rs  window.rs
crates/revive-cli/src/cheat_panel/: hex_viewer.rs  memory.rs  search.rs
crates/revive-core/: Cargo.toml
crates/revive-core/src/: lib.rs  paths.rs  system.rs
crates/revive-core/src/adapters/: common.rs  gameboy.rs  instance.rs  megadrive.rs  mod.rs  nes.rs  pce.rs  sega8.rs  snes.rs
crates/revive-core/tests/: snes_adapter_regressions.rs
(+422 files in other folders)
