[workspace]
members = [
    "crates/cores/gameboy/core",
    "crates/cores/gameboy/gb",
    "crates/cores/gameboy/gba",
    "crates/cores/mastersystem",
    "crates/cores/megadrive",
    "crates/cores/nes",
    "crates/cores/pce",
    "crates/cores/sg1000",
    "crates/cores/snes",
    "crates/revive-core",
    "crates/revive-cheat",
    "crates/revive-cli",
]
default-members = ["crates/revive-cli"]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package.emulator-core]
opt-level = 3

[profile.dev.package.emulator-gb]
opt-level = 3

[profile.dev.package.emulator-gba]
opt-level = 3

[profile.dev.package.megadrive-core]
opt-level = 3

[profile.dev.package.mastersystem-core]
opt-level = 3

[profile.dev.package.nes-emulator]
opt-level = 3

[profile.dev.package.pce-core]
opt-level = 3

[profile.dev.package.sg1000-core]
opt-level = 3

[profile.dev.package.snes-core]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.release-native]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false
strip = "debuginfo"
