[package]
name = "revive-cli"
version = "0.1.0"
edition = "2021"
default-run = "revive"

[dependencies]
revive-core = { path = "../revive-core" }
revive-cheat = { path = "../revive-cheat" }
rfd = "0.15"
sdl2 = { version = "0.36", features = ["bundled", "static-link"] }

[[bin]]
name = "revive"
path = "src/main.rs"
