[package]
name = "revive-cli"
version = "0.1.0"
edition = "2021"
default-run = "revive"

[dependencies]
revive-core = { path = "../revive-core" }
revive-cheat = { path = "../revive-cheat" }
egui = "0.31"
egui_sdl2_gl = "0.31"
rfd = "0.15"
sdl2 = { version = "0.37", features = ["bundled", "static-link"] }

[[bin]]
name = "revive"
path = "src/main.rs"
