[package]
name = "revive-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "revive_core"
path = "src/lib.rs"

[dependencies]
emulator-core = { path = "../cores/gameboy/core" }
emulator-gb = { path = "../cores/gameboy/gb" }
emulator-gba = { path = "../cores/gameboy/gba" }
megadrive-core = { path = "../cores/megadrive" }
nes-emulator = { path = "../cores/nes" }
pce = { package = "pce-core", path = "../cores/pce" }
snes-core = { path = "../cores/snes" }
