[package]
name = "revive-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "revive_core"
path = "src/lib.rs"

[features]
default = []
snes-runtime-debug-flags = ["snes-core/runtime-debug-flags"]
megadrive-runtime-debug-flags = ["megadrive-core/runtime-debug-flags"]
gba-runtime-debug-trace = ["emulator-gba/runtime-debug-trace"]

[dependencies]
emulator-core = { path = "../cores/gameboy/core" }
emulator-gb = { path = "../cores/gameboy/gb" }
emulator-gba = { path = "../cores/gameboy/gba" }
megadrive-core = { path = "../cores/megadrive" }
nes-emulator = { path = "../cores/nes" }
pce = { package = "pce-core", path = "../cores/pce" }
sg1000-core = { path = "../cores/sg1000" }
snes-core = { path = "../cores/snes" }
