[package]
name = "snes-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "snes_emulator"
path = "src/lib.rs"

[dependencies]
bitflags = "2.4"
png = "0.17"
rodio = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wide = "0.7"

[features]
dev = ["runtime-debug-flags"]
runtime-debug-flags = []
